@@ -1,8 +1,9 @@
-// $Id: CHANGELOG.txt,v 1.94 2010/05/16 21:08:17 alexb Exp $
+// $Id: CHANGELOG.txt,v 1.95 2010/05/16 21:15:53 alexb Exp $
 
 Feeds 6.x 1.0 xxxxxxxxxxxxxxxxxxxx
 ----------------------------------
 
+- #704236 jerdavis: Support mapping to CCK float field.
 - #783820 klonos: Fix warning: copy() [function.copy]: Filename cannot be empty
   in FeedsParser.inc on line 168.
 - #778416 clemens.tolboom: Better message when plugin is missing.
